--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   adaptive_theme: ^3.1.1
   file_picker: ^5.2.4
   provider: ^6.0.5
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
